--- a/style.css
+++ b/style.css
@@ -10,10 +10,8 @@ body{
     position: relative;
     right: 0;
     top: 0;
-    height: 2em;
+    /*height: 2em;*/
     padding-left: 10px;
-    font: 1.156em/1.3 Gill Sans MT, Gill Sans, My Gill Sans, sans-serif;
-  	font-size: xx-large;
 }
 
 img{
@@ -21,203 +19,81 @@ img{
 }
 
 /*****************************************************************************/
-
-#Color{
-  background:darkorange;
+.heart{
+  /*content*/
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  margin-top: 50vh;
+  background: white;
 }
 
-.text{
-  text-align:center;
-  font-family: Verdana, sans-serif;
-  font-weight: bold;
-  color:white;
-}
-
-.message{
-  height: 60px;
-  width: 250px;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 62% 100%, 60% 77%, 0% 75%);
-  background: black;
-  margin:0 auto;
-  animation:MessageOn 6s infinite;
-}
-
-.container-0{
-  position:absolute;
-  margin:0 auto;
-  left: 0px;
-  right: 0px;
-  background:transparent;
-  width: 800px;
-  height: 800px;
-  z-index: -1;
-}
-
-.head{
-    width: 300px;
-    height: 300px;
-    position:absolute;
-    margin:0 auto;
-    left: 0px;
-    right: 0px;
-    border-radius: 50%;
-    /*background: #ff62ab;*/
-   /* border: 6px solid;*/
-    animation:BodyChange 1s infinite;
-}
-
-.body{
-    width: 300px;
-    height: 250px;
-    border-radius: 25px 25px 50px 50px;
-    position:absolute;
-    margin:0 auto;
-    left: 0px;
-    right: 0px;
-    top:200px;
-    z-index:-1;
-}
-
-
-.arm1{
-     width: 70px;
-     height: 200px;
-     z-index:-1;
-     position:absolute;
-     margin:0 auto;
-     left: 190px;
-     top: 235px;
-     border-radius: 50px 0px 50px 50px;
-     transform: rotate(45deg);
-}
-
-.arm2{
-     width: 70px;
-     height: 200px;
-     background: #ff62ab;
-     z-index:-1;
-     position:absolute;
-     margin:0 auto;
-     right: 190px;
-     top: 235px;;
-     border-radius: 50px 0px 50px 50px;
-    /* transform: rotateY(180deg);*/
-     transform: rotate(-45deg);
-}
-
-.leg1{
-     width: 70px;
-     height: 250px;
-     z-index:-1;
-     position:absolute;
-     margin:0 auto;
-     left: 440px;
-     top: 310px;     
-     border-radius: 0px 0px 20px 20px;
-}
-
-.leg2{
-     width: 70px;
-     height: 250px;
-     z-index:-1;
-     position:absolute;
-     margin:0 auto;
-     right: 440px;
-     top: 310px;
-     border-radius: 00px 0px 20px 20px;
-     transform: rotateY(180deg);
-}
-
-#eye-1{
-  height: 40px;
-  width: 40px;
-  border-radius: 20px;
-  background: black;
-  margin-top: 90px;
-  margin-left: 50px;
-}
-
-#eye-2{
-  height: 40px;
-  width: 40px;
-  border-radius: 20px;
-  background: black;
-  margin-top: -43px;
-  margin-left: 210px;
-}
-
-.pupil-1{
-    width: 20px;
-    height: 20px;
-    background: white;
-    border-radius: 20px;
-    margin: 0px 0px 0px 10px;
-}
-
-.pupil-2{
-    width: 10px;
-    height: 10px;
-    background: white;
-    border-radius: 5px;
-    margin: 5px 0px 0px 10px;
-}
-
-.pupil-2right{
-    width: 10px;
-    height: 10px;
-    background: white;
-    border-radius: 5px;
-    margin: 5px 0px 0px 15px;
-}
-
-.mouth{
-  Background: #000;
-  height:110px;
-  width: 7px;
-  border-radius:3px;
-  transform: rotate(-90deg);
+.circle::after{
+  /*square*/
+  width: 90px;
+  height: 90px;
+  content:'';
+  background: crimson;
+  border-radius: 45px;
   position: absolute;
-  margin:0 auto;
-  left: 0px;
-  right: 0px;
-  top: 200px;
-  animation:MouthChange 6s infinite;
+  margin: 44px 0px;
 }
 
-@keyframes MessageOn{
-  0%{
-    background:transparent;
-    color:transparent;
-  }
-  25% {
-    background:transparent;
-    color:transparent;
-  }
-  50%{
-    background: black;
-    color: white;
-  }
-  100%{
-    background:transparent;
-    color:transparent;
-  }
-
+.circle::before{
+  /*circle1*/
+    width: 90px;
+    height: 90px;    
+    /*top: 100px;
+    left: 40px;*/
+    content:'';
+    background: crimson;
+    position: absolute;
+    z-index: 1;
+    margin: 0px 44px;
+    border-radius: 45px;
 }
 
-@keyframes MouthChange{
-  0%{
-    height:110px;
-    width: 7px;
-    border-radius:3px;
-  }
-  50%{
-    height: 150px;
-    width: 75px;
-    border-radius: 160px 0 0 160px;
-  }
-  100%{
-    height:110px;
-    width: 7px;
-    border-radius:3px;    
-  }
+.circle{
+  /*circle2*/
+  width:90px;
+  height:90px;
+  /*left: 80px;
+  top: 64px;*/
+  content:'';
+  background: crimson;
+  position: absolute;
+  margin: 35px 0px 0px 30px;
+  /*transform: rotate(45deg);*/
+  transform: rotate(-135deg);
+}
+
+.halfMoon{
+  background: transparent;
+  height: 90px;
+  width: 45px;
+  position: absolute;
+  border-radius: 76px 0px 0px 0px;
+  margin: 82px 81px;
+  transform: rotate(45deg);
+}
+.halfMoon::before{
+  background: white;
+  height: 90px;
+  width: 45px;
+  border-radius: 76px 0px 0px 0px;
+  content: '';
+  position: absolute;
+  margin: 45px -40px;
+  transform: rotate(78.5deg);
+}
+
+.halfMoon::after{
+  background: white;
+  height: 90px;
+  width: 45px;
+  border-radius: 0px 0px 0px 76px;  
+  content: '';
+  margin: 3px 7px;
+  position: absolute;  
+  transform: rotate(369deg);
 }
