--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     position: relative;
     right: 0;
     top: 0;
-    /*height: 2em;*/
     padding-left: 10px;
 }
 
@@ -19,13 +18,34 @@ img{
 }
 
 /*****************************************************************************/
+
+.container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: -1;
+  margin: 0px;
+  font-size: 0px;
+  padding: 0px;
+}
+
+.col{
+  display:inline-block;
+  width: 19%;
+}
+
 .heart{
   /*content*/
   width: 150px;
   height: 150px;
-  margin: 0 auto;
-  margin-top: 50vh;
+  /*margin: 0 auto;*/
   background: white;
+  position: relative;
+  top: 120vh;
+  z-index:-1;
 }
 
 .circle::after{
@@ -41,29 +61,24 @@ img{
 
 .circle::before{
   /*circle1*/
-    width: 90px;
-    height: 90px;    
-    /*top: 100px;
-    left: 40px;*/
-    content:'';
-    background: crimson;
-    position: absolute;
-    z-index: 1;
-    margin: 0px 44px;
-    border-radius: 45px;
+  width: 90px;
+  height: 90px;    
+  content:'';
+  background: crimson;
+  position: absolute;
+  z-index: 1;
+  margin: 0px 44px;
+  border-radius: 45px;
 }
 
 .circle{
   /*circle2*/
   width:90px;
   height:90px;
-  /*left: 80px;
-  top: 64px;*/
   content:'';
   background: crimson;
   position: absolute;
   margin: 35px 0px 0px 30px;
-  /*transform: rotate(45deg);*/
   transform: rotate(-135deg);
 }
 
@@ -97,3 +112,50 @@ img{
   position: absolute;  
   transform: rotate(369deg);
 }
+
+.heart1{
+  animation: 20s Linear-motion infinite,MoveLeft 23s infinite;
+  animation-delay: 5s;
+}
+
+.heart2{
+  animation: 12s Linear-motion infinite, MoveLeft 15s infinite;
+  animation-delay: 1s;
+}
+
+.heart3{
+  animation: 12s Linear-motion infinite, MoveLeft 15s infinite;
+  animation-delay: 18s;
+}
+
+.heart4{
+  animation: 16s Linear-motion infinite, MoveLeft 19s infinite;
+  animation-delay: 11s;
+}
+
+.heart5{
+  animation: 15s Linear-motion infinite, MoveLeft 18s infinite;
+  animation-delay: 5s;
+}
+
+@keyframes Linear-motion{
+  0%{     
+    top:100vh;
+  }
+  100%{
+    top:-20vh;
+  }
+}
+
+@keyframes MoveLeft{
+  0%{
+    margin-left: 0%;
+  }
+  50%{
+    margin-left:50%;
+  }
+  100%{
+    margin-left: 0%;
+  }
+}
+
